Correct speakers overlapping images

--- a/about.css
+++ b/about.css
@@ -201,7 +201,7 @@ body {
   width: 475px;
   height: 180.72px;
   border: 1px solid #d3d3d3;
-  padding: 30px 120px 30px 120px;
+  padding: 30px 20% 30px 20%;
 }
 
 .separator {
